fix animation on iphone (not sure if it works)

--- a/src/Components/Activity.css
+++ b/src/Components/Activity.css
@@ -41,6 +41,10 @@ box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
     width: 140%;
     font-size: 240%;
     margin-top: -50%;
+    -webkit-transition-property: width, margin, font-size;
+    -webkit-transition-duration: 1s;
+    -webkit-transition-timing-function: ease-in-out;
+    -webkit-transition-delay: 1.2s;
     transition-property: width, margin, font-size;
     transition-duration: 1s;
     transition-timing-function: ease-in-out;
