--- a/src/Components/Oeuf.css
+++ b/src/Components/Oeuf.css
@@ -4,13 +4,10 @@
     display: block;
     position: absolute;
     margin-top: 0;
-    transition-property: margin-top, opacity;
-    transition-duration: 1s,2s;
-    transform-style: ease-out;
-    transition-delay: 0s,1s;
     opacity: 1;
 }
 .Oeufanim {
+    margin-top:0;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -41,11 +38,27 @@
 }
 
 .up {
+    -webkit-transition-property: margin-top, opacity;
+    -webkit-transition-duration: 1s,2s;
+    -webkit-transform-style: ease-out;
+    -webkit-transition-delay: 0s,1s;
+    transition-property: margin-top, opacity;
+    transition-duration: 1s,2s;
+    transform-style: ease-out;
+    transition-delay: 0s,1s;
     margin-top: -130%;
     opacity:0;
 }
 
 .down {
+    -webkit-transition-property: margin-top, opacity;
+    -webkit-transition-duration: 1s,2s;
+    -webkit-transform-style: ease-out;
+    -webkit-transition-delay: 0s,1s;
+    transition-property: margin-top, opacity;
+    transition-duration: 1s,2s;
+    transform-style: ease-out;
+    transition-delay: 0s,1s;
     opacity:0;
     margin-top: 50%;
 }
